# LibreChat

dashboard/: .env.example  PROGRESS.md  app.py  auth.py  config.py  dashboard.sh  db.py  export.py  export_transactions.py  pyproject.toml  queries.py  s3_client.py  s3helper.py
dashboard/docs/: ARCHITECTURE.md  mongodb-schema.md  transactions-analysis.md
dashboard/static/: style.css
dashboard/templates/: base.html  dashboard.html  error.html  files.html  login.html  sessions.html  tokens.html  usage.html
dashboard/templates/partials/: conversation_list.html  file_table.html  message_list.html  model_table.html  token_table.html  usage_table.html  user_list.html
