[project]
name = "dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "motor>=3.5.0",
    "openpyxl>=3.1.0",
    "pyjwt>=2.8.0",
    "pymongo>=4.17.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
]
